POR-78: Bugfix: border shadow covered by error text bg

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -75,7 +75,6 @@ input {
 
 .error-text {
     @include textProperties();
-    background-color: #fff3f3;
     width: $width;
     color: red;
 }
